--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     padding: 2rem;
     border-radius: 1rem;
     min-height: 45vh;
-    width: 40vw;
+    width: 30vw;
 }
 
 form{
@@ -77,4 +77,26 @@ form input{
     color: white;
     font-size: 1.2rem;
     cursor: pointer;
+}
+
+
+
+@media screen and (max-width: 1000px) {
+    .container{
+        width: 80vw;
+    }
+    .dropdown{
+        justify-content: space-evenly;
+    }
+}
+
+@media  screen and (max-width: 400px) {
+    .dropdown{
+        flex-direction: column;
+        row-gap: 10px;
+    }
+
+    .dropdown .i{
+        transform: rotate(90deg);
+    }
 }
